fix: Investment and Budget similar to frontend